# injector-framework

./: CMakeLists.txt  README.md  todo.md
src/: main.cpp
src/core/: inj.cpp  inj.h  mem.cpp  mem.h
src/menu/: draw.cpp  menu.cpp  menu.h
src/utils/: asm_gcc.S  asm_msvc.asm  sys.cpp  sys.h  utils.cpp  utils.h  vars.cpp  vars.h  win.h  winapi.h
